<resources>

    <!-- Dialog -->
    <string name="dialog_title">Exit</string>
    <string name="dialog_message">Are you want to leave ?</string>
    <string name="dialog_pos">YES</string>
    <string name="dialog_neg">NO</string>
    <string name="dialog_deputy">Deputy</string>
    <string name="dialog_ok">OK</string>

    <!-- Menu -->
    <string name="menu_deputy">Deputy</string>
    <string name="menu_order">Order</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_display">Display Setting</string>
    <string name="menu_volumn">Voulumn Setting</string>

    <!-- HelloRammus.java -->
    <string name="app_name">HelloRammus</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_hello_rammus">HelloRammus</string>
    <string name="hello_rammus_login_ok">Login OK!</string>
    <string name="hello_rammus_login_fail">Login Fail!</string>

    <!-- order_activity.xml -->
    <string name="order_title">Order System</string>
    <string name="order_cheese">Cheese</string>
    <string name="order_vegetable">Vegetable</string>
    <string name="order_to_go">TO GO</string>
    <string name="order_stay_in">STAY IN</string>
    <string name="order_button">Confirm order</string>

    <!-- AboutActivity.java -->
    <string name="about_activity_version">v1.0</string>

    <!-- activity_about.xml -->
    <string name="activity_about_btn_change">Change Image</string>
    <string name="activity_about_pd_title">Loading</string>
    <string name="activity_about_pd_message">Please wait...</string>

    <!-- login.xml -->
    <string name="button_login">Login</string>
    <string name="label_result">Login Result</string>
    <string name="label_id">ID : </string>
    <string name="label_pw">Password : </string>

    <!-- navigation button -->
    <string name="navigation_home">Home</string>
    <string name="navigation_bmi">BMI</string>
    <string name="navigation_about">About</string>

    <!-- LoginOK.java -->
    <string name="login_ok_welcome">Welcome</string>
    <string name="login_ok_btn">Logout</string>

    <!-- HelloBMI.java -->
    <string name="label_height">Height :</string>
    <string name="label_weight">Weight :</string>
    <string name="label_bmi">BMI = </string>
    <string name="label_BMIresult">result :</string>
    <string name="button_calculate">Calculate</string>

    <!-- hello_sqlite.xml -->
    <string name="hello_sqlite_textView1">Rammus Meal Backend</string>
    <string name="hello_sqlite_textView2">Meal Name</string>
    <string name="hello_sqlite_hint">input meal name you want to add</string>
    <string name="hello_sqlite_button1">Add to menu</string>
    <string name="hello_sqlite_button2">Query</string>
    <string name="hello_sqlite_button3">Reset DB</string>

    <!-- Hello Intent -->
    <string name="btn_search">Search</string>
    <string name="btn_open">Open</string>
    <string name="btn_navigation">Navigate</string>
    <string name="btn_call_phone">Call</string>
    <string name="btn_play_music">Play</string>
    <string name="btn_share_uri">Share</string>
    <string name="hint_search_keyword">Search keyword</string>
    <string name="hint_open_url_keyword">open URL</string>
    <string name="hint_open_geo_map_keyword">open Map</string>
    <string name="hint_open_navigation_map_keyword">Navigaton</string>
    <string name="hint_call_phone_no">phone number</string>
    <string name="hint_play_music_url">music url</string>
    <string name="hint_share_url">url you want to share</string>

    <!-- Hello Search -->
    <string name="label_search_manager_title">Search:</string>
    <string name="btn_search_manager_1">Search 1</string>
    <string name="btn_search_manager_2">Search 2</string>
    <string name="btn_search_manager_3">Search 3</string>
    <string name="btn_search_manager_4">Search 4</string>
    <string name="btn_search_manager_5">Search 5</string>
    <string name="btn_search_manager_6">Search 6</string>
    <string name="hint_search_manager_key_word">Keyword you wanna search</string>
    <string name="label_search_manager_voice">Voice prompt</string>

    <!-- Hello XXX Manager -->
    <string name="label_xxx_manager">XXXManager</string>
    <string name="label_xxx_manager_vibrator">Vibrator</string>
    <string name="btn_xxx_manager_vloume_up">Volumn up</string>
    <string name="btn_xxx_manager_vloume_down">Volumn down</string>

    <!-- Hello Internet -->
    <string name="label_hello_internet_stock">Stock</string>
    <string name="hint_hello_internet_stock_number">Stock No.</string>
    <string name="btn_hello_internet_stock_query">Query</string>
    <string name="str_hello_internet_stock_result">Results</string>
    <string name="str_loading">Loading</string>
    <string name="str_plz_wait">Please wait...</string>

    <!-- Hello Fragment -->
    <string name="btn_hello_fragment_show_one">Fragment One</string>
    <string name="btn_hello_fragment_show_two">Fragment Two</string>
    <string name="label_hello_fragment_layout_one">Layout One</string>
    <string name="label_hello_fragment_layout_two">Layout Two</string>

</resources>