<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_deputy"
        android:title="@string/menu_deputy">
    </item>
    <item
        android:id="@+id/menu_order"
        android:title="@string/menu_order">
    </item>
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about">
    </item>
    <item
        android:id="@+id/menu_setting"
        android:title="@string/menu_setting"
        android:icon="@drawable/ic_launcher">
        <menu>
            <item android:id="@+id/menu_display" android:title="@string/menu_display"/>
            <item android:id="@+id/menu_volumn" android:title="@string/menu_volumn"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_exit"
        android:title="@string/menu_exit">
    </item>

</menu>